welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:13: error: value right is not a member of Unit
			left();for(f<-1 to 5) {avance();} right();}
                                                          ^